--- a/GridDataDisplay/Web.config
+++ b/GridDataDisplay/Web.config
@@ -52,6 +52,6 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="ItemEntities" connectionString="metadata=res://*/ItemModel.csdl|res://*/ItemModel.ssdl|res://*/ItemModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAMZ;initial catalog=RamzDB;user id=sa;password=1qaz2wsx@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ItemEntities" connectionString="metadata=res://*/ItemModel.csdl|res://*/ItemModel.ssdl|res://*/ItemModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=master;Integrated Security=SSPI;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
